# vampire-guide

./: .gitignore  Dockerfile  LICENSE  README.md  api.py  area.py  augment_graph.py  calc.py  calculate_polygon_shade.py  calculate_shadow_sum.py  find_path_and_show_map.py  geopandas_selection.py  index.html  precompute_pathfinding.py  pyproject.toml  quadtree_buildings.py  requirements.txt  retrieve_polygons.py  showshadow.py  test_augment.py  test_retrieve_polygons.py  test_value_of_path.py
data/: buildings_csv_cleanup.py  network.graphml
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: Map.vue
